# AppTemplate

./: CMakeLists.txt  README.md  memory.ld
.github/workflows/: main.yml
cmake/toolchains/: armv7e-m.cmake
include/: systick_config.h
src/: main.cpp  postform_config.cpp
